@startuml ERD_Shop
left to right direction
skinparam shadowing false
skinparam class {
  BackgroundColor White
  BorderColor #111827
  ArrowColor #4B5563
}

entity "User\n(users)" as User {
  *id : varchar
  --
  username : varchar
  email : varchar
  hashed_password : varchar
  created_at : timestamptz
  updated_at : timestamptz
}

entity "Cart\n(carts)" as Cart {
  *id : serial
  --
  user_id : varchar (FK users.id, nullable)
  session_id : varchar (nullable)
  created_at : timestamptz
  updated_at : timestamptz
}

entity "CartItem\n(cart_items)" as CartItem {
  *id : serial
  --
  cart_id : int (FK carts.id)
  item_id : int (FK items.id)
  quantity : int
}

entity "Item\n(items)" as Item {
  *id : serial
  --
  name : varchar
  description : text (nullable)
  price : double precision
  stock : int
  picture_path : varchar (nullable)
  tags : varchar (nullable)
  created_at : timestamptz
  updated_at : timestamptz
}

entity "Order\n(orders)" as Order {
  *id : serial
  --
  user_id : varchar (FK users.id)
  total_amount : double precision
  status : varchar
  created_at : timestamptz
  updated_at : timestamptz
}

entity "OrderItem\n(order_items)" as OrderItem {
  *id : serial
  --
  order_id : int (FK orders.id)
  item_id : int (FK items.id)
  quantity : int
  unit_price : double precision
}

note bottom of Cart
  Cho phép giỏ khách vãng lai: user_id có thể null
  và session_id giữ trạng thái ngắn hạn.
end note

User ||--o{ Cart : "sở hữu"
Cart ||--o{ CartItem : "chứa"
Item ||--o{ CartItem : "được chọn"
User ||--o{ Order : "đặt"
Order ||--o{ OrderItem : "bao gồm"
Item ||--o{ OrderItem : "được bán"
@enduml
